tests/fails/8.mat
matrix      errrr[3*2,2+6]